overflow fix

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
 	overflow: auto;
 	font-size: 75%;
 	max-height: 100%;
+	box-sizing: border-box;
 }
 
 .debug-ui ul {
